--- a/main.html
+++ b/main.html
@@ -57,6 +57,11 @@
         if (callNow) func.apply(context, args);
       };
     }
+	  function addSlide(){
+		  var scrolledImages=document.querySelectorAll('.slide-in');
+		  scrolledImages.forEach
+		  
+	  }
 
   </script>
 
