--- a/main.html
+++ b/main.html
@@ -59,17 +59,22 @@
     }
 	  function addSlide(){
 		  var scrolledImages=document.querySelectorAll('.slide-in');
-		  scrolledImages.forEach(img)=>{
+		  scrolledImages.forEach((img)=>{
 			  var scrolledHeight=window.scrolly+window.innerHeight-img.height/2;
 			  var imageBottomHeight=i,g.offsetTop + img.height;
 			  var isImageHalfScrolled= scrolledHeight > img.offsettop;
 
 			  var isImageFullyScrolled = window.scrolly > imageBottomHeight;
 
-			  if(isImageHalfScrolled )
-		  }
+			  if(isImageHalfScrolled && !isImageFullyScrolled){
+				  img.classList.add("active");
+			  }else{
+				  img.classList.remove("active");
+			  }
+		  });
 		  
 	  }
+	  window.addEventListener('scroll', debounce(addSlide));
 
   </script>
 
