--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
 		 scrolledImages.forEach((img)=>{
 			 var scrolledHeight=window.scrolly+window.innerHeight-img.height/2;
 			 var imageBottomHeight=img.offsetTop + img.height;
-			  var isImageHalfScrolled= scrolledHeight > img.offsettop;
+			  var isImageHalfScrolled= scrolledHeight > img.offsetTop;
 			  var isImageFullyScrolled = window.scrolly > imageBottomHeight;
 
 			   if(isImageHalfScrolled && !isImageFullyScrolled){
@@ -71,11 +71,8 @@
 				  img.classList.remove("active");
 			}
 			 });
-		  
-	  
 		  }
 		  
-	  
 	  window.addEventListener('scroll', debounce(addSlide));
 
   </script>
