--- a/main.html
+++ b/main.html
@@ -73,7 +73,7 @@
 			 });
 		  }
 		  
-	  window.addEventListener('scroll', debounce(addSlide));
+	  window.addEventListener('scroll', debounce(addSlide()));
 
   </script>
 
